@@ -82,6 +82,8 @@ struct probe_ip {
 	struct outq* host_c;
 	/* http query in progress */
 	struct http_get* http;
+	/* desc of http (available even when done and http is NULL) */
+	char* http_desc;
 
 	/* if probe has finished */
 	int finished;
@@ -139,6 +141,7 @@ void probe_cache_done(void);
 void probe_all_done(void);
 void probe_unsafe_test(void);
 void probe_tcp_test(void);
+void probe_http_test(void);
 void probe_ssl_test(void);
 void probe_setup_cache(struct svr* svr, struct probe_ip* p);
 void probe_setup_hotspot_signon(struct svr* svr);
